<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".telas.TelaCadastro">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:id="@+id/rl">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/etCodigo"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etCodigo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/etNome"
            android:ems="10"
            android:id="@+id/etNome"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etValorCusto"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etValorCusto" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/etQuantidade"
            android:layout_gravity="center_horizontal"
            android:hint="@string/etQuantidade" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAdicionar"
            android:id="@+id/btnAdicionar"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/abc_btn_colored_borderless_text_material" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAlterar"
            android:id="@+id/btnAlterar"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:textColor="#ffffff"
            android:visibility="invisible" />
    </LinearLayout>

</RelativeLayout>
